--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
 <div class="body">
   <div class="toolbar" role="banner">
-    <h2>Blockchain Project</h2>
-    <h2> {{name}} </h2>
+    <!-- <h2>Blockchain Project</h2>
+    <h2> {{name}} </h2> -->
+    <div class="switch-box">
+        <div>Overview</div>
+        <button>New Application</button>
+    </div>
+    <!-- <div class="search-box">
+      <input type="text">
+      <div>Search</div>
+    </div> -->
   </div>
 
   <div class="mat-elevation-z8 content accent" role="main">
