--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,120 @@
     top: calc(50% - 10px);
     left: calc(50% - 10px);
 }
+
+
+:host {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 14px;
+    color: #333;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  p {
+    margin: 0;
+  }
+  
+  .spacer {
+    flex: 1;
+  }
+  
+  .toolbar {
+    position: absolute;
+    padding: 0 .5em;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #313981bb;
+    color: rgb(233, 231, 241);
+    font-weight: 600;
+    h2 {
+      font-size: 17px;
+      margin: 1em 2em;
+      font-family: Andale Mono, monospace;
+    }
+  }
+  .switch-box{
+    // background-color: #efefef;
+    opacity: .7;
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+  }
+  .search-box{
+    opacity: .7;
+    display: flex;
+    // justify-content: space-between;
+    width: 20%;
+  }
+  
+  
+  .content {
+    display: flex;
+    margin: 82px auto 32px;
+    padding: 0 16px;
+    max-width: 100%;
+    flex-direction: column;
+    align-items: center;
+    table {
+      width: 90%;
+    }
+    .element-row{
+      cursor: pointer;
+    }
+    tr.element-row:not(.transaction-expanded-row):hover {
+      background: whitesmoke;
+    }
+  
+    tr.element-row:not(.transaction-expanded-row):active {
+      background: #efefef;
+    }
+    
+  }
+  
+  
+  #cover-spin {
+    position:fixed;
+    width:100%;
+    left:0;right:0;top:0;bottom:0;
+    background-color: rgba(255,255,255,0.7);
+    z-index:9999;
+  }
+  @-webkit-keyframes spin {
+      from {-webkit-transform:rotate(0deg);}
+      to {-webkit-transform:rotate(360deg);}
+  }
+  
+  @keyframes spin {
+      from {transform:rotate(0deg);}
+      to {transform:rotate(360deg);}
+  }
+  
+  #cover-spin::after {
+      content:'';
+      display:block;
+      position:absolute;
+      left:48%;top:40%;
+      width:40px;height:40px;
+      border-style:solid;
+      border-color: #313981bb;
+      border-top-color:transparent;
+      border-width: 8px;
+      border-radius:50%;
+      -webkit-animation: spin .8s linear infinite;
+      animation: spin .8s linear infinite;
+  }
+  
+  .us-spinner-wrapper.loading {
+    pointer-events: auto;
+        background: rgba(255, 255, 255, 0.6);
+  }
+  
+  @media screen and (max-width: 575px) {
+  
+  }
