--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <!-- <h2>Blockchain Project</h2>
     <h2> {{name}} </h2> -->
     <div class="switch-box">
-        <div>Overview</div>
-        <button>New Application</button>
+      <div><a [routerLink]="['']">Home</a></div>
+      <button>New Application</button>
     </div>
     <!-- <div class="search-box">
       <input type="text">
