--- a/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
+++ b/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
@@ -41,11 +41,12 @@
             multiTemplateDataRows>
             <ng-container matColumnDef="name">
               <th class="w-40" mat-header-cell *matHeaderCellDef> Role </th>
-              <td mat-cell *matCellDef="let element"> 
+              <td mat-cell *matCellDef="let element; let i = index"> 
                   <!-- {{element.name}} -->
+                 wwwwww: {{i + 1}} :name{{arrayOfRoles.filteredData.indexOf(element)}}
                     <mat-form-field>
                         <input matInput  type="text"
-                            name="test" id="test"
+                            name="name{{arrayOfRoles.filteredData.indexOf(element)}}" id="name{{arrayOfRoles.filteredData.indexOf(element)}}"
                             [(ngModel)]="element.name" >
                     </mat-form-field>
                 </td>
@@ -55,8 +56,8 @@
               <th mat-header-cell *matHeaderCellDef> Permission </th>
               <td mat-cell *matCellDef="let element"> 
                     <mat-form-field>
-                        <input matInput  type="permit"
-                            name="permit" id="permit"
+                        <input matInput  type="text"
+                            name="permit{{arrayOfRoles.filteredData.indexOf(element)}}" id="permit{{arrayOfRoles.filteredData.indexOf(element)}}"
                             [(ngModel)]="element.permission" >
                     </mat-form-field>
                 </td>
@@ -65,7 +66,7 @@
   
             <tr mat-header-row *matHeaderRowDef="displayedFeaturesTx"></tr>
   
-            <tr mat-row *matRowDef="let row; columns: displayedFeaturesTx;" class="element-row"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedFeaturesTx; let j = index" class="element-row"></tr>
             
           </table>
   
