--- a/src/app/containers/configuraion-list/configuraion-list.component.html
+++ b/src/app/containers/configuraion-list/configuraion-list.component.html
@@ -11,7 +11,7 @@
       </ng-container>
 
       <ng-container matColumnDef="latestChange">
-        <th class="w-20" mat-header-cell *matHeaderCellDef> Update </th>
+        <th class="w-20" mat-header-cell *matHeaderCellDef> Latest Update </th>
         <td mat-cell *matCellDef="let element"> {{element.latestChange}} </td>
       </ng-container>
 
