--- a/src/app/containers/view-configuration-unit/view-configuration-unit.component.html
+++ b/src/app/containers/view-configuration-unit/view-configuration-unit.component.html
@@ -1,6 +1,8 @@
 <div class="content">
     <div class="app-information">
       <h3> General Information </h3>
+      <div>test: {{ (currentConfiguration | async)?.latestChange}}</div>
+      <!-- <div>test: {{ (selectedConfiguration | async)?.latestChange}}</div> -->
       <table class="general">
         <tr class="item">
           <th> Name </th>
@@ -15,13 +17,14 @@
           <td> {{appInfo.latestChange}} </td>
         </tr>
       </table>
-
      <div><button (click)="updateConfiguration()">Edit</button></div>
     </div>
+
+
     <div class="delta-list">
       <h3> Change Records </h3>
         <div class="mat-elevation-z8 accent" role="main">
-            <table mat-table #table [dataSource]="deltaList" matSort>
+            <table mat-table #table [dataSource]="(currentDelta | async)" matSort>
 
             <ng-container matColumnDef="message">
                 <th class="w-40" mat-header-cell *matHeaderCellDef> Message </th>
@@ -36,7 +39,7 @@
         
               <ng-container matColumnDef="time">
                 <th class="w-20" mat-header-cell *matHeaderCellDef>Update Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
               </ng-container>
 
 <!--                       
