--- a/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
+++ b/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
@@ -1,86 +1,85 @@
 <div mat-dialog-content>
-    <!-- <h3> Application Details</h3> -->
-    <div class="container">
-        <h3>Basic Data</h3>
-        <div class="general">
-            <mat-form-field>
-                <input matInput type="text"
-                       placeholder="App Name" name="name" id="name"
-                       [(ngModel)]="arrayOfJsons.name">
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput type="text"
-                       placeholder="Owner" name="owner" id="owner"
-                       [(ngModel)]="arrayOfJsons.owner">
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput type="text"
-                       placeholder="Editor" name="configManager" id="configManager"
-                       [(ngModel)]="arrayOfJsons.metaData.configManager">
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput  type="text"
-                       placeholder="Latest Change Date" name="latestChange" id="latestChange"
-                       [(ngModel)]="arrayOfJsons.latestChange" [readonly]="true" disabled>
-            </mat-form-field>
+  <!-- <h3> Application Details</h3> -->
+  <div class="container">
+    <h3>Basic Data</h3>
+    <div class="general">
+      <mat-form-field>
+        <input matInput type="text" placeholder="App Name" name="name" id="name" [(ngModel)]="arrayOfJsons.name"
+          [readonly]="action" [disabled]="action">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" placeholder="Owner" name="owner" id="owner" [(ngModel)]="arrayOfJsons.owner"
+          [readonly]="action" [disabled]="action">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" placeholder="Editor" name="configManager" id="configManager"
+          [(ngModel)]="arrayOfJsons.metaData.configManager" [readonly]="action" [disabled]="action">
+      </mat-form-field>
+      <div *ngIf="!action">
+        <mat-form-field>
+          <input matInput type="text" placeholder="Latest Change Date" name="latestChange" id="latestChange"
+            [(ngModel)]="arrayOfJsons.latestChange" [readonly]="true" disabled>
+        </mat-form-field>
+      </div>
+      <div *ngIf="action">
+        <mat-form-field>
+          <input matInput type="text" placeholder="TimeStamp" name="timestamp" id="timestamp"
+            [(ngModel)]="arrayOfJsons.timestamp" [readonly]="true" disabled>
+        </mat-form-field>
+      </div>
 
-        </div>
-        <div class="message">
-            <mat-form-field class="paragraph">
-                <input   matInput type="text"
-                       placeholder="Message" name="message" id="message"
-                       [(ngModel)]="message">
-            </mat-form-field>
-        </div>
+    </div>
+    <div class="message">
+      <mat-form-field class="paragraph">
+        <input matInput type="text" placeholder="Message" name="message" id="message" [(ngModel)]="message">
+      </mat-form-field>
+    </div>
 
-  
-      <h3>Technology Data</h3>
-      <div class="techData">
-        <div>
-          <table #table mat-table accent [dataSource]="arrayOfRoles" class="mat-elevation-z0"
-            multiTemplateDataRows>
-            <ng-container matColumnDef="name">
-              <th class="w-40" mat-header-cell *matHeaderCellDef> Role </th>
-              <td mat-cell *matCellDef="let element; let i = index"> 
-                  <!-- {{element.name}} -->
-                 wwwwww: {{i + 1}} :name{{arrayOfRoles.filteredData.indexOf(element)}}
-                    <mat-form-field>
-                        <input matInput  type="text"
-                            name="name{{arrayOfRoles.filteredData.indexOf(element)}}" id="name{{arrayOfRoles.filteredData.indexOf(element)}}"
-                            [(ngModel)]="element.name" >
-                    </mat-form-field>
-                </td>
-            </ng-container>
-  
-            <ng-container class="w-20" matColumnDef="permission">
-              <th mat-header-cell *matHeaderCellDef> Permission </th>
-              <td mat-cell *matCellDef="let element"> 
-                    <mat-form-field>
-                        <input matInput  type="text"
-                            name="permit{{arrayOfRoles.filteredData.indexOf(element)}}" id="permit{{arrayOfRoles.filteredData.indexOf(element)}}"
-                            [(ngModel)]="element.permission" >
-                    </mat-form-field>
-                </td>
-            </ng-container>
 
-  
-            <tr mat-header-row *matHeaderRowDef="displayedFeaturesTx"></tr>
-  
-            <tr mat-row *matRowDef="let row; columns: displayedFeaturesTx; let j = index" class="element-row"></tr>
-            
-          </table>
-  
-          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </div>
+    <h3>Technology Data</h3>
+    <div class="techData">
+      <div>
+        <table #table mat-table accent [dataSource]="arrayOfRoles" class="mat-elevation-z0" multiTemplateDataRows>
+          <ng-container matColumnDef="name">
+            <th class="w-40" mat-header-cell *matHeaderCellDef> Role </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <!-- {{element.name}} -->
+              wwwwww: {{i + 1}} :name{{arrayOfRoles.filteredData.indexOf(element)}}
+              <mat-form-field>
+                <input matInput type="text" name="name{{arrayOfRoles.filteredData.indexOf(element)}}"
+                  id="name{{arrayOfRoles.filteredData.indexOf(element)}}" [(ngModel)]="element.name">
+              </mat-form-field>
+            </td>
+          </ng-container>
+
+          <ng-container class="w-20" matColumnDef="permission">
+            <th mat-header-cell *matHeaderCellDef> Permission </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-form-field>
+                <input matInput type="text" name="permit{{arrayOfRoles.filteredData.indexOf(element)}}"
+                  id="permit{{arrayOfRoles.filteredData.indexOf(element)}}" [(ngModel)]="element.permission">
+              </mat-form-field>
+            </td>
+          </ng-container>
+
+
+          <tr mat-header-row *matHeaderRowDef="displayedFeaturesTx"></tr>
+
+          <tr mat-row *matRowDef="let row; columns: displayedFeaturesTx; let j = index" class="element-row"></tr>
+
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
-  
   </div>
-  
-  <div mat-dialog-actions style="display: flex; justify-content: flex-end;width: 100%;">
-    <span></span>
-    <div style="margin-right: auto; display: flex; justify-content: flex-end;">
-        <button mat-raised-button (click)="update()">Save Changes</button>
-        <button mat-raised-button (click)="close()">Cancel</button>
-    </div>
+
+</div>
+
+<div mat-dialog-actions style="display: flex; justify-content: flex-end;width: 100%;">
+  <span></span>
+  <div style="margin-right: auto; display: flex; justify-content: flex-end;">
+    <button mat-raised-button (click)="update()">Save Changes</button>
+    <button mat-raised-button (click)="close()">Cancel</button>
   </div>
+</div>
