--- a/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
+++ b/src/app/containers/configuraion-details-card/configuraion-details-card.component.html
@@ -4,29 +4,22 @@
     <h3>Basic Data</h3>
     <div class="general">
       <mat-form-field>
-        <input matInput type="text" placeholder="App Name" name="name" id="name" [(ngModel)]="arrayOfJsons.name"
-          [readonly]="action" [disabled]="action">
+        <input matInput type="text" placeholder="App Name" name="name" id="name" [(ngModel)]="arrayOfJsons.name">
       </mat-form-field>
       <mat-form-field>
         <input matInput type="text" placeholder="Owner" name="owner" id="owner" [(ngModel)]="arrayOfJsons.owner"
-          [readonly]="action" [disabled]="action">
+          >
       </mat-form-field>
       <mat-form-field>
         <input matInput type="text" placeholder="Editor" name="configManager" id="configManager"
-          [(ngModel)]="arrayOfJsons.metaData.configManager" [readonly]="action" [disabled]="action">
+          [(ngModel)]="arrayOfJsons.metaData.configManager" >
       </mat-form-field>
-      <div *ngIf="!action">
+
         <mat-form-field>
           <input matInput type="text" placeholder="Latest Change Date" name="latestChange" id="latestChange"
             [(ngModel)]="arrayOfJsons.latestChange" [readonly]="true" disabled>
         </mat-form-field>
-      </div>
-      <div *ngIf="action">
-        <mat-form-field>
-          <input matInput type="text" placeholder="TimeStamp" name="timestamp" id="timestamp"
-            [(ngModel)]="arrayOfJsons.timestamp" [readonly]="true" disabled>
-        </mat-form-field>
-      </div>
+
 
     </div>
     <div class="message">
@@ -43,8 +36,6 @@
           <ng-container matColumnDef="name">
             <th class="w-40" mat-header-cell *matHeaderCellDef> Role </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <!-- {{element.name}} -->
-              wwwwww: {{i + 1}} :name{{arrayOfRoles.filteredData.indexOf(element)}}
               <mat-form-field>
                 <input matInput type="text" name="name{{arrayOfRoles.filteredData.indexOf(element)}}"
                   id="name{{arrayOfRoles.filteredData.indexOf(element)}}" [(ngModel)]="element.name">
@@ -79,7 +70,8 @@
 <div mat-dialog-actions style="display: flex; justify-content: flex-end;width: 100%;">
   <span></span>
   <div style="margin-right: auto; display: flex; justify-content: flex-end;">
-    <button mat-raised-button (click)="update()">Save Changes</button>
+    <button *ngIf="!action" mat-raised-button (click)="update()">Save Changes</button>
+    <button *ngIf="action" mat-raised-button (click)="create()">Create</button>
     <button mat-raised-button (click)="close()">Cancel</button>
   </div>
 </div>
