--- a/src/app/containers/view-configuration-unit/view-configuration-unit.component.html
+++ b/src/app/containers/view-configuration-unit/view-configuration-unit.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="app-information">
-      <h3> General Information </h3>
+      <div class="title"> <h3> General Information </h3>  <button mat-icon-button (click)="updateConfiguration()"><mat-icon>settings</mat-icon></button></div>
       <table class="general">
         <tr class="item">
           <th> Name </th>
@@ -15,7 +15,7 @@
           <td> {{appInfo.latestChange}} </td>
         </tr>
       </table>
-     <div><button (click)="updateConfiguration()">Edit</button></div>
+    
     </div>
 
 
@@ -39,13 +39,6 @@
                 <th class="w-20" mat-header-cell *matHeaderCellDef>Update Time </th>
                 <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
               </ng-container>
-
-<!--                       
-              <ng-container matColumnDef="change">
-                <th class="w-20" mat-header-cell *matHeaderCellDef> Click For Details </th>
-                <td mat-cell *matCellDef="let element"> {{element.change}} </td>
-              </ng-container> -->
-        
         
         
               <tr mat-header-row *matHeaderRowDef="deltaColDef"></tr>
