--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="home">
       <div><a [routerLink]="['']"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></div>
     </div>
-    <div class="create"><button mat-icon-button (click)="createApp()"><mat-icon>create</mat-icon>Create</button></div>
+    <div class="create"><button mat-icon-button (click)="createApp()">Create<mat-icon>create</mat-icon></button></div>
   </div>
 </div>
 
