--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="body">
   <div class="toolbar" role="banner">
+    <div>Ju Hunag Hua</div>
     <div class="home">
       <div><a [routerLink]="['']"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></div>
     </div>
+    <div class="space"></div>
     <div class="create"><button mat-icon-button (click)="createApp()">Create<mat-icon>create</mat-icon></button></div>
   </div>
 </div>
